--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
                 <a href="pages/rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="pages/recruitment.html"
-                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -104,23 +104,20 @@
                     connect, chat, and have fun together. Join us and see what makes us stand out!
                 </p>
             </div>
-            <button class="relative px-4 py-2 sm:px-6 sm:py-3 text-white font-medium text-sm sm:text-lg rounded-lg 
-    overflow-hidden transition-all duration-500 group" data-aos="fade-right"><a href="#about">
+            <div class="flex md:justify-start" data-aos="fade-right">
+                <a href="#about" target="_blank"
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-7 text-base w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">
+                    Learn More
+                </a>
+            </div>
 
-                    <span
-                        class="absolute inset-0 bg-[#aa724d] transition-all duration-500 group-hover:opacity-0"></span>
-                    <span
-                        class="absolute inset-0 bg-[#6d4c35] opacity-0 transition-all duration-500 group-hover:opacity-100"></span>
-
-                    <span class="relative z-10">Learn More</span></button></a>
-            </button>
 
         </div>
     </section>
 
     <!-- ABOUT -->
     <section class="h-auto bg-black/90 text-white flex justify-center items-center p-5 py-36 shadow-4xl" id="about">
-        <div class="bg-black/25 flex flex-col justify-center items-center p-7 rounded-lg shadow-lg max-w-4xl mx-auto space-y-8"
+        <div class="bg-black/25 flex flex-col justify-center items-center p-7 rounded-lg shadow-lg max-w-4xl mx-auto space-y-8 bg-gradient-to-b from-[#2e2e2e] to-black"
             data-aos="fade-up">
             <!-- Header Section -->
             <div class="text-center">
@@ -169,8 +166,8 @@
                     <!-- Join Us Button -->
                     <div class="flex justify-center md:justify-start">
                         <a href="https://discord.gg/MwNE7Vfb6t" target="_blank"
-                            class="px-8 py-3 bg-[#aa724d] text-white font-medium rounded-lg mt-6 hover:bg-[#6d4c35] transition-all duration-300">
-                            Join Server
+                            class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-6 text-base w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">
+                            Join Now
                         </a>
                     </div>
                 </div>
@@ -186,8 +183,8 @@
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
                     <img src="assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
-                        We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        We created this server to have fun and build a friendly community. We'd be thrilled if you
+                        joined us, and we're here to welcome you with open arms! Let's make some great memories
                         together!
                     </p>
                 </div>
@@ -214,7 +211,7 @@
             </div>
 
             <!-- Garis Pemisah -->
-            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+            <div class="border-t border-[#d49163] mt-8 pt-4 text-center text-sm text-[#fffff]">
                 © 2025 SMKN 5 KIEV. All Rights Reserved.
             </div>
         </div>
