--- a/pages/donate.html
+++ b/pages/donate.html
@@ -32,7 +32,7 @@
                 <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
                 <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -90,61 +90,68 @@
                     <div class="donateBox-itemList flex flex-wrap gap-4 justify-center">
                         <!-- Donation Option 1 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-80 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💷 Contributor</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
-                                <li>Mendapat role @Contributor</li>
-                                <li>Bebas request Custom Role</li>
-                                <li>Bisa mengganti nama sesuka hati</li>
+                                <li>Receive the @Contributor role</li>
+                                <li>Free to request a Custom Role</li>
+                                <li>Can change your name freely</li>
                                 <li>+3 Arcane Level</li>
-                                <li>Di-display dibawah role Trainee</li>
+                                <li>Displayed below the Trainee role</li>
                             </ul>
                             <div>
                                 <p class="text-xs text-gray-400">* Permanent Role</p>
-                                <p class="text-xs text-gray-400">* Minimal donate 50k</p>
-                                <p class="text-xs text-gray-400">* Bagian "pesan" isi nickname discord</p>
-                                <p class="text-xs text-gray-400">* Sudah berdonasi? Silahkan buka ticket</p>
+                                <p class="text-xs text-gray-400">* Minimum donation of 50k</p>
+                                <p class="text-xs text-gray-400">* Already donated? Please open a ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#e7a77c]">Min Rp50.000</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">Min Rp50,000</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 2 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-80 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💶 Donator</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
-                                <li>Mendapatkan role @Donator</li>
-                                <li>Bebas request custom role</li>
-                                <li>Bisa mengganti nama sesuka hati</li>
+                                <li>Receive the @Donator role</li>
+                                <li>Free to request a Custom Role</li>
+                                <li>Can change your name freely</li>
                                 <li>+1 Arcane Level</li>
-                                <li>Di-display dibawah Contributor</li>
+                                <li>Displayed below Contributor</li>
                             </ul>
                             <div>
                                 <p class="text-xs text-gray-400">* Permanent Role</p>
                                 <p class="text-xs text-gray-400">* Non-permanent Custom Role</p>
-                                <p class="text-xs text-gray-400">* Bagian "pesan" isi nickname discord</p>
-                                <p class="text-xs text-gray-400">* sudah berdonasi? Silahkan buka ticket</p>
+                                <p class="text-xs text-gray-400">* Already donated? Please open a ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#e7a77c]">Min Rp10.000</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">Min Rp10,000</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 3 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-80 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💵 Booster</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
-                                <li>Mendapatkan role @Booster</li>
-                                <li>Bisa mengganti nama sesuka hati</li>
-                                <li>Di-display dibawah role @Donator</li>
-                                <li>Bebas request Custom Role</li>
+                                <li>Receive the @Booster role</li>
+                                <li>Can change your name freely</li>
+                                <li>Displayed below the @Donator role</li>
+                                <li>Free to request a Custom Role</li>
                             </ul>
                             <div>
-                                <p class="text-xs text-gray-400">* Berlaku selama Nitro Boost Aktif</p>
-                                <p class="text-xs text-gray-400">* Buka ticket untuk claim benefit</p>
+                                <p class="text-xs text-gray-400">* Valid as long as Nitro Boost is active</p>
+                                <p class="text-xs text-gray-400">* Open a ticket to claim benefits</p>
                             </div>
                             <div class="text-center mt-auto">
                                 <span class="text-lg font-bold text-[#e7a77c]">Boost Server</span>
@@ -153,25 +160,28 @@
 
                         <!-- Donation Option 4 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-80 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💴 Benefactor</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
-                                <li>Mendapatkan role @Benefactor</li>
-                                <li>Bisa mengganti nama sesuka hati</li>
-                                <li>Di-display dibawah role @Booster</li>
+                                <li>Receive the @Benefactor role</li>
+                                <li>Can change your name freely</li>
+                                <li>Displayed below the @Booster role</li>
                             </ul>
                             <div>
-                                <p class="text-xs text-gray-400">* Berlaku selama 1 bulan</p>
-                                <p class="text-xs text-gray-400">* Ingin berdonasi? Silahkan buka ticket</p>
+                                <p class="text-xs text-gray-400">* Valid for 1 month</p>
+                                <p class="text-xs text-gray-400">* Want to donate? Please open a ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#e7a77c]">1.000.000 UwU</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">1,000,000 UwU</span>
                             </div>
                         </div>
                     </div>
                     <div class="flex justify-center">
                         <p
-                            class="py-2 px-5  bg-[#aa724d] my-5 mx-auto max-w-40 text-center rounded-lg shadow-lg transition-all duration-300 hover:bg-[#6d4c35] ">
+                            class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 mt-10 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">
                             <a href="https://sociabuzz.com/phionne/tribe" target="_blank"
                                 class="text-white font-semibold">Donate
                                 Now</a>
@@ -207,8 +217,8 @@
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
                     <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
-                        We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        We created this server to have fun and build a friendly community. We'd be thrilled if you
+                        joined us, and we're here to welcome you with open arms! Let's make some great memories
                         together!
                     </p>
                 </div>
@@ -235,7 +245,7 @@
             </div>
 
             <!-- Garis Pemisah -->
-            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+            <div class="border-t border-[#d49163] mt-8 pt-4 text-center text-sm text-[#fffff]">
                 © 2025 SMKN 5 KIEV. All Rights Reserved.
             </div>
         </div>
