--- a/pages/leaderboard.html
+++ b/pages/leaderboard.html
@@ -32,7 +32,7 @@
                 <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
                 <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -72,19 +72,37 @@
         </div>
     </header>
 
-    <!-- Leaderboard -->
-    <section id="leaderboard"
-        class="sectionLeaderboard bg-black/90 min-h-screen flex flex-col justify-center text-white py-32">
+    <!-- Chat Leaderboard -->
+    <section id="leaderboard" class="sectionLeaderboard bg-black/90 flex flex-col justify-center text-white pt-40">
         <div class="leaderboardContainer container mx-auto px-4" data-aos="fade-up">
             <div class="leaderboardBox bg-black/25 rounded-lg shadow-lg p-7">
                 <div class="leaderboardBox-item">
                     <div class="leaderboardBox-itemTitle text-center mb-6">
                         <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
-                            🏆 MONTHLY <span class="text-[#d49163]">LEADERBOARD</span>
+                            🏆 MONTHLY CHAT <span class="text-[#d49163]">LEADERBOARD</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
                     </div>
                     <div id="leaderboard-list" class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Voice Leaderboard -->
+    <section id="leaderboard" class="sectionLeaderboard bg-black/90 flex flex-col justify-center text-white py-32">
+        <div class="leaderboardContainer container mx-auto px-4" data-aos="fade-up">
+            <div class="leaderboardBox bg-black/25 rounded-lg shadow-lg p-7">
+                <div class="leaderboardBox-item">
+                    <div class="leaderboardBox-itemTitle text-center mb-6">
+                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
+                            🏆 MONTHLY VOICE <span class="text-[#d49163]">LEADERBOARD</span>
+                        </h1>
+                        <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
+                    </div>
+                    <div id="leaderboard-list" class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
+                        <h5 class="text-gray-400">Coming Soon</h5>
                     </div>
                 </div>
             </div>
@@ -99,8 +117,8 @@
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
                     <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
-                        We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        We created this server to have fun and build a friendly community. We'd be thrilled if you
+                        joined us, and we're here to welcome you with open arms! Let's make some great memories
                         together!
                     </p>
                 </div>
@@ -127,7 +145,7 @@
             </div>
 
             <!-- Garis Pemisah -->
-            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+            <div class="border-t border-[#d49163] mt-8 pt-4 text-center text-sm text-[#fffff]">
                 © 2025 SMKN 5 KIEV. All Rights Reserved.
             </div>
         </div>
