--- a/pages/staff.html
+++ b/pages/staff.html
@@ -32,7 +32,7 @@
                 <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
                 <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -88,99 +88,149 @@
                     <div class="organizationBox-itemList flex flex-wrap gap-4 justify-center">
                         <!-- Community Manager -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
-                            <h2 class=" text-lg font-semibold text-white">Community Manager (Admin)</h2>
-                            <p class="text-gray-400 text-sm mt-2">Leads and oversees the server, makes major decisions,
-                                and
-                                ensures smooth community operations.</p>
+                            class="relative bg-gradient-to-b from-[#2e2e2e] to-black bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg border-2 border-[#e7a77c] 
+                        transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 
+                            group-hover:opacity-100 transition-all duration-500"></div>
+                            <h2
+                                class="text-lg font-semibold text-white group-hover:text-[#ffcc99] transition-all duration-500">
+                                Community Manager</h2>
+                            <p class="text-gray-400 text-sm mt-2 group-hover:text-gray-200 transition-all duration-500">
+                                Leads and oversees the server, makes major decisions, and ensures smooth community
+                                operations.
+                            </p>
                         </div>
 
                         <!-- Division Manager -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
-                            <h2 class=" text-lg font-semibold text-white">Division Manager</h2>
-                            <p class="text-gray-400 text-sm mt-2">Responsible for managing and supervising each division
-                                within the community.</p>
+                            class="relative bg-gradient-to-b from-[#2e2e2e] to-black bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg border-2 border-[#e7a77c] 
+                        transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 
+                            group-hover:opacity-100 transition-all duration-500"></div>
+                            <h2
+                                class="text-lg font-semibold text-white group-hover:text-[#ffcc99] transition-all duration-500">
+                                Division Manager</h2>
+                            <p class="text-gray-400 text-sm mt-2 group-hover:text-gray-200 transition-all duration-500">
+                                Responsible for managing and supervising each division within the community.
+                            </p>
                         </div>
 
                         <!-- Team Management -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
-                            <h2 class=" text-lg font-semibold text-white">Team Management (Staff)</h2>
-                            <p class="text-gray-400 text-sm mt-2">Includes all the divisions below, with a Manager
-                                overseeing each division.</p>
+                            class="relative bg-gradient-to-b from-[#2e2e2e] to-black bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg border-2 border-[#e7a77c] 
+                        transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 
+                            group-hover:opacity-100 transition-all duration-500"></div>
+                            <h2
+                                class="text-lg font-semibold text-white group-hover:text-[#ffcc99] transition-all duration-500">
+                                Team Management (Staff)</h2>
+                            <p class="text-gray-400 text-sm mt-2 group-hover:text-gray-200 transition-all duration-500">
+                                Includes all the divisions below, with a Manager overseeing each division.
+                            </p>
                         </div>
 
                         <!-- List of Divisions -->
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 w-full">
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Developer</h3>
-                                <p class="text-gray-400 text-sm">Manages the website and server bots, ensuring the
-                                    system
-                                    runs smoothly.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Developer</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Manages the website and server bots, ensuring the system runs smoothly.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Human Resource (HRD)</h3>
-                                <p class="text-gray-400 text-sm">Recruits new staff, oversees evaluations, and resolves
-                                    internal issues.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Human Resource (HRD)</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Recruits new staff, oversees evaluations, and resolves internal issues.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Brand Ambassador</h3>
-                                <p class="text-gray-400 text-sm">Promotes the community and maintains a positive server
-                                    image.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Brand Ambassador</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Promotes the community and maintains a positive server image.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Event Organizer</h3>
-                                <p class="text-gray-400 text-sm">Plans and executes engaging and beneficial events.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Event Organizer</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Plans and executes engaging and beneficial events.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Chat Moderator</h3>
-                                <p class="text-gray-400 text-sm">Monitors chats, enforces rules, and fosters positive
-                                    interactions.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Chat Moderator</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Monitors chats, enforces rules, and fosters positive interactions.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Host Event</h3>
-                                <p class="text-gray-400 text-sm">Hosts events and actively interacts with members.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Host Event</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Hosts events and actively interacts with members.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Designer</h3>
-                                <p class="text-gray-400 text-sm">Creates server designs, banners, and logos.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Designer</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Creates server designs, banners, and logos.
+                                </p>
                             </div>
 
-                            <div
-                                class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#e7a77c]">Partner Manager</h3>
-                                <p class="text-gray-400 text-sm">Manages partnerships and maintains good relationships
-                                    with
-                                    server partners.</p>
+                            <div class="relative bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg border border-[#e7a77c] 
+                            transition-all duration-500 hover:scale-105 hover:shadow-xl group cursor-pointer">
+                                <h3
+                                    class="text-base font-semibold text-[#e7a77c] group-hover:text-[#ffcc99] transition-all duration-500">
+                                    Partner Manager</h3>
+                                <p class="text-gray-400 text-sm group-hover:text-gray-200 transition-all duration-500">
+                                    Manages partnerships and maintains good relationships with server partners.
+                                </p>
                             </div>
                         </div>
 
                         <!-- Trainee -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
-                            <h2 class=" text-lg font-semibold text-white">Trainee</h2>
-                            <p class="text-gray-400 text-sm mt-2">Learns the server work system before being placed in a
-                                suitable division.</p>
+                            class="relative bg-gradient-to-b from-[#2e2e2e] to-black bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg border-2 border-[#e7a77c] 
+                        transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 
+                            group-hover:opacity-100 transition-all duration-500"></div>
+                            <h2
+                                class="text-lg font-semibold text-white group-hover:text-[#ffcc99] transition-all duration-500">
+                                Trainee</h2>
+                            <p class="text-gray-400 text-sm mt-2 group-hover:text-gray-200 transition-all duration-500">
+                                Learns the server work system before being placed in a suitable division.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <!-- STAFF -->
     <section id="staff" class="bg-black/90 px-5 text-white py-12 min-h-screen flex flex-col justify-center gap-10">
@@ -197,8 +247,8 @@
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
                     <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
-                        We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        We created this server to have fun and build a friendly community. We'd be thrilled if you
+                        joined us, and we're here to welcome you with open arms! Let's make some great memories
                         together!
                     </p>
                 </div>
@@ -225,7 +275,7 @@
             </div>
 
             <!-- Garis Pemisah -->
-            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+            <div class="border-t border-[#d49163] mt-8 pt-4 text-center text-sm text-[#fffff]">
                 © 2025 SMKN 5 KIEV. All Rights Reserved.
             </div>
         </div>
