--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -32,7 +32,7 @@
                 <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
                 <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -86,48 +86,69 @@
                     </div>
                     <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
                             <p class="text-sm text-gray-300 text-center">Helps keep the chat atmosphere comfortable and
                                 conducive.</p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎤 Host Event</h2>
                             <p class="text-sm text-gray-300 text-center">Organize and lead exciting events to community.
                             </p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🌟 Brand Ambassador</h2>
                             <p class="text-sm text-gray-300 text-center">Improve server image in the outside world.</p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎭 Event Organizer</h2>
                             <p class="text-sm text-gray-300 text-center">Plan and run creative events for community.
                             </p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🤝 Partner Manager</h2>
                             <p class="text-sm text-gray-300 text-center">Establish cooperation with the community or
                                 other organizations.</p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎨 Designer</h2>
                             <p class="text-sm text-gray-300 text-center">Helps design interesting visual content.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 bg-gradient-to-b from-[#2e2e2e] to-black rounded-xl p-5 w-96 sm:w-72 shadow-lg border-2 border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer">
+                            <div
+                                class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                            </div>
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource</h2>
                             <p class="text-sm text-gray-300 text-center">Helps recruit and manage other staff.
                             </p>
@@ -140,15 +161,19 @@
                             server develop. Your passion to contribute and build community that better is the thing we
                             value the most!</p>
                     </div>
-                    <div class="text-center mt-6">
-                        <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank"
-                            class="px-6 py-3 bg-[#aa724d] text-white font-bold rounded-lg shadow-lg hover:bg-[#6d4c35] transition-all">Apply
-                            Now</a>
+                    <div class="flex justify-center">
+                        <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank">
+                            <button
+                                class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5text-lg w-40 rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500">
+                                Apply Now
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- Footer -->
     <footer id="footer" class="bg-zinc-950 text-white py-12">
         <div class="container mx-auto px-6">
@@ -157,8 +182,8 @@
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
                     <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
-                        We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        We created this server to have fun and build a friendly community. We'd be thrilled if you
+                        joined us, and we're here to welcome you with open arms! Let's make some great memories
                         together!
                     </p>
                 </div>
@@ -185,7 +210,7 @@
             </div>
 
             <!-- Garis Pemisah -->
-            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+            <div class="border-t border-[#d49163] mt-8 pt-4 text-center text-sm text-[#fffff]">
                 © 2025 SMKN 5 KIEV. All Rights Reserved.
             </div>
         </div>
