--- a/pages/rules.html
+++ b/pages/rules.html
@@ -32,7 +32,7 @@
                 <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
                 <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
-                    class="bg-[#aa724d] hover:bg-[#aa724d] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
+                    class="bg-[#aa724d] hover:bg-[#6d4c35] border-none py-2 px-5 w-auto rounded-xl text-lightcoral shadow-[0_0.4rem_0_0_#dfd9d9] cursor-pointer hover:bg-lightcoral hover:text-white  active:shadow-[0_0.2rem_0_0_#dfd9d9] active:translate-y-1 disabled:cursor-auto disabled:text-gray-500 text-center">Recruitment</a>
             </nav>
 
             <!-- Mobile Menu Button -->
@@ -86,7 +86,10 @@
 
                     <!-- Rules Card -->
                     <div
-                        class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-full sm:w-96 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d] mx-auto max-w-md">
+                        class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-full sm:w-96 shadow-lg border-2 bg-gradient-to-b from-[#2e2e2e] to-black border-[#e7a77c] transition-all duration-500 hover:scale-105 hover:shadow-2xl hover:border-[#ffcc99] group cursor-pointer mx-auto max-w-md">
+                        <div
+                            class="absolute inset-0 rounded-xl bg-[#e7a77c]/20 blur-xl opacity-0 group-hover:opacity-100 transition-all duration-500 pointer-events-none">
+                        </div>
                         <h2 class="text-lg font-semibold text-white">General Rules</h2>
                         <ul class="text-gray-400 text-sm mt-2 list-disc list-inside">
                             <li>Respect other members</li>
@@ -108,8 +111,8 @@
                 <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
                     <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
                     <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
-                        We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        We created this server to have fun and build a friendly community. We'd be thrilled if you
+                        joined us, and we're here to welcome you with open arms! Let's make some great memories
                         together!
                     </p>
                 </div>
@@ -136,7 +139,7 @@
             </div>
 
             <!-- Garis Pemisah -->
-            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+            <div class="border-t border-[#d49163] mt-8 pt-4 text-center text-sm text-[#fffff]">
                 © 2025 SMKN 5 KIEV. All Rights Reserved.
             </div>
         </div>
